sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value getNombreValeur
    for (j<-i to getNombreValeur()-1){
                 ^