sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-1 to getNombreValeurs()-1){
    for (j<-i to getNombreValeur()-1){
      if (plusPetit(i,j)){
        echange(i,j)
      }
    }
  }
}